--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" content="">
     <meta name="author" content="David Milosavljević, sodakolor@gmail.com">
@@ -14,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -23,49 +24,51 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css"  />
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
+    <div id="empty-space">
+    </div>
     <header class="full-height">
         <div class="container-fluid full-height" id="div1">
-            <div class="row ">
-                <div class="text-center col-sm-4 col-xs-12">
-                    <div class="mtheader headertext2">
-                        <h3 id="istoktextsize">
-                            Istok
-                        </h3>
-                        <h3>
-                            Restoran Vijetnamske Kuhinje
-                        </h3>
+            <div class="row">
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
+                    <div class="text-center col-sm-12 col-xs-12">
+                        <div class="mtheader headertext2">
+                            <h3 id="istoktextsize">
+                                Istok
+                            </h3>
+                            <h3>
+                                Restoran Vijetnamske Kuhinje
+                            </h3>
+                        </div>
                     </div>
-                </div>
-                <div class="text-center col-sm-4 col-xs-12">
-                    <img id="logo" src="images/logo1.png" alt="logoistok" class="img-responsive">
-                </div>
-                <div class="text-center col-sm-4 col-xs-12">
-                    <div class="mtheader headertext">
-                        <h3>
-                            Gospodar Jevremova 50, <br id="br"> Dorćol, Beograd <br> Utorak - Nedelja: 12h-24h <br> Ponedeljak:
-                            Ne radi
-                        </h3>
+                    <div class="col-md-12 text-center">
+                        <img id="logo" src="images/logo1.png">
                     </div>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-2 col-md-offset-3 navbar">
-                    <a href="#about">O nama</a>
+                    <div class="col-md-12">
+                        <div class="col-md-3 text-center navbar">
+                            <a href="#about">O nama</a>
+                        </div>
+
+                        <div class="col-md-3 text-center navbar">
+                            <a href="#gallery">Menu</a>
+                        </div>
+                        <div class="col-md-3 navbar">
+                            <a href="#contact">Galerija</a>
+                        </div>
+                        <div class="col-md-3 navbar">
+                            <a href="#contact">Kontakt</a>
+                        </div>
+                    </div>
+
+
                 </div>
 
-                <div class="col-md-2 navbar">
-                    <a href="#gallery">Galerija</a>
-                </div>
-                <div class="col-md-2  navbar">
-                    <a href="#contact">Kontakt</a>
-                </div>
             </div>
-
-        </div>
         </div>
     </header>
     <section class="full-height" id="background3">
@@ -133,11 +136,11 @@
                         </div>
                     </div>
                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
@@ -158,7 +161,7 @@
                     <img id="footer-logo" src="images/logo1.png" alt="logoistok" class="img-responsive">
                 </div>
                 <div class="text-center col-sm-2" id="linebreak">
-                 <a href="#div1"> <img src="images/spoonvertical2.png" alt="spoon" class="img-responsive" id="spoonvertical"> </a>
+                    <a href="#div1"> <img src="images/spoonvertical2.png" alt="spoon" class="img-responsive" id="spoonvertical"> </a>
                 </div>
                 <div class="text-center col-sm-5">
                     <div class="mtheader footertext">
@@ -175,6 +178,8 @@
             </div>
         </div>
     </section>
+    <div id="empty-space-btm">
+    </div>
 </body>
 
 
