--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-md-6">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <div class="text-center col-sm-12 col-xs-12">
                         <div class="mtheader headertext2">
                             <h3 id="istoktextsize">
@@ -46,21 +46,21 @@
                             </h3>
                         </div>
                     </div>
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12 col-sm-12 text-center">
                         <img id="logo" src="images/logo1.png">
                     </div>
-                    <div class="col-md-12">
-                        <div class="col-md-3 text-center navbar">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="col-md-3 col-sm-3 text-center navbar">
                             <a href="#about">O nama</a>
                         </div>
 
-                        <div class="col-md-3 text-center navbar">
+                        <div class="col-md-3 col-sm-3  text-center navbar">
                             <a href="#gallery">Menu</a>
                         </div>
-                        <div class="col-md-3 navbar">
+                        <div class="col-md-3 col-sm-3 navbar">
                             <a href="#contact">Galerija</a>
                         </div>
-                        <div class="col-md-3 navbar">
+                        <div class="col-md-3 col-sm-3 navbar">
                             <a href="#contact">Kontakt</a>
                         </div>
                     </div>
