--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             </div>
         </div>
-    </header>
+    </header>   
     <section class="full-height" id="background3">
     </section>
     <section class="full-height" id="about">
@@ -91,6 +91,15 @@
             </div>
         </div>
     </section>
+    <div class="menu">
+        <div class="row">
+             <div class="col-md-2">
+                 <h3> Jela </h3>
+                 <h3> JAGODINA </h3>
+                 <h3> KRSUMLIJA </h3>
+             </div>
+        </div>
+    </div>
     <section id="gallery">
         <div class="container-fluid">
             <div class="row" id="carousel">
