Style fix, and map text

--- a/index.html
+++ b/index.html
@@ -50,17 +50,13 @@
                         <img id="logo" src="images/logo1.png">
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <div class="col-md-3 col-sm-3 text-center navbar">
+                        <div class="col-md-4 col-sm-4 text-center navbar">
                             <a href="#about">O nama</a>
                         </div>
-
-                        <div class="col-md-3 col-sm-3  text-center navbar">
-                            <a href="#gallery">Menu</a>
+                        <div class="col-md-4 col-sm-4 text-center navbar">
+                            <a href="#gallery">Galerija</a>
                         </div>
-                        <div class="col-md-3 col-sm-3 navbar">
-                            <a href="#contact">Galerija</a>
-                        </div>
-                        <div class="col-md-3 col-sm-3 navbar">
+                        <div class="col-md-4 col-sm-4 text-center navbar">
                             <a href="#contact">Kontakt</a>
                         </div>
                     </div>
@@ -91,15 +87,6 @@
             </div>
         </div>
     </section>
-    <div class="menu">
-        <div class="row">
-             <div class="col-md-2">
-                 <h3> Jela </h3>
-                 <h3> JAGODINA </h3>
-                 <h3> KRSUMLIJA </h3>
-             </div>
-        </div>
-    </div>
     <section id="gallery">
         <div class="container-fluid">
             <div class="row" id="carousel">
@@ -176,7 +163,8 @@
                     <div class="mtheader footertext">
                         <h5 id="footertext">
                             Kontakt i Rezervacije: </br>
-                            011 3281360 <br> restoranistok@gmail.com
+                            011 3281360 <br> restoranistok@gmail.com <br>
+                          Radno vreme:<br>  Utorak-Nedelja 13:00h-24:00h
                         </h5>
                         <div class="text-center">
                             <a class="nofocus social-icons" href="https://www.facebook.com/istokrestoran/?fref=ts" target="_blank"> <img src="images/facebook.png" alt="facebook" onclick="facebook"> </a>
