--- a/index.html
+++ b/index.html
@@ -73,20 +73,19 @@
     <section class="full-height" id="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="text-center">
-                        <h2>
-                            “Neka vaša hrana bude lek, a vaš lek vaša hrana.” <br> Hipokrat
-                        </h2>
-                        <img id="spoon" src="images/spoon.png" alt="spoon">
-                        <h2 id="textbelowspoon">
-                            Vijetnamski restoran. Prvi u Beogradu. <br> Duh i svežina orijenta u našoj interpretaciji. Inovativan,
-                            egzotičan i zavodljiv.
-                        </h2>
-                    </div>
+                <div class="col-md-12 text-center">
+                    <h2 id="textabowspoon">“Neka vaša hrana bude lek, a vaš lek vaša hrana.” <br> Hipokrat </h2>
+                </div>
+                <div class="col-md-12 text-center">
+                    <img id="spoon" src="images/spoon.png" alt="spoon">
+                </div>
+                <div class="col-md-12 text-center">
+                    <h2 id="textbelowspoon">Vijetnamski restoran. Prvi u Beogradu. <br> Duh i svežina orijenta u našoj interpretaciji. Inovativan,
+                        egzotičan i zavodljiv.</h2>
                 </div>
             </div>
         </div>
+
     </section>
     <section class="full-height-2" id="meni">
         <div class="container-fluid">
@@ -100,13 +99,13 @@
                     <div class="col-md-12">
                         <h4> GOI CUON LETNJE ROLNICE / GOI CUON AKA SUMMER ROLLS </h4>
 
-                        <h5 class="description"> Rolnice od pirincanog papira punjene pirincanim nudlama, ajzberg salatom, nanom, korijanderom, sargarepom
-                            i krastavcem servirane uz nu cam i kikiriki sos.</h5>
+                        <h5 class="description"> Rolnice od pirinčanog papira punjene pirinčanim nudlama, ajzberg salatom, nanom, korijanderom, šargarepom
+                            i krastavcem, servirane uz nu čam i kikiriki sos.</h5>
                         <h5 class="description"> Fresh rice paper rolls filled with rice noodles, iceberg lettuce, mint, coriander, carrot and cucumber,
                             served with nuoc cham and peanut butter sauce. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
-                        <h5 id="tooltip1"> Cepkana govedina i avokado / Pulled beef and avocado
+                        <h5 id="tooltip"> Cepkana govedina i avokado / Pulled beef and avocado
                             <span>
         <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
     </span> </h5>
@@ -115,31 +114,39 @@
                         <h5 id="price"> 390 </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
-                        <h5> Skampi i mango / Shrimps and mango </h5>
+                        <h5 id="tooltip1"> Škampi i mango / Shrimps and mango <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span> </h5>
                     </div>
                     <div class="col-md-2 col-sm-2">
                         <h5 id="price"> 420 </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
-                        <h5> Vegeterijanske rolnice sa avokadom / Vegetarian rolls with avocado </h5>
+                        <h5 id="tooltip5"> Vegeterijanske rolnice sa avokadom / Vegetarian rolls with avocado <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h5>
                     </div>
                     <div class="col-md-2 col-sm-2">
                         <h5 id="price"> 370 </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4>VIT KHO </h4>
+                        <h4 id="tooltip2">VIT KHO <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span> </h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
                         <h5> 440 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Komadići pačećeg bataka u slatkom sosu od djumbira. <br> Duck leg slices in sweet ginger sauce. </h5>
+                        <h5 class="description"> Komadići pačećeg bataka u slatkom sosu od đumbira. <br> Duck leg slices in sweet ginger sauce. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> POHOVANI TOFU / FRIED TOFU </h4>
+                        <h4 id="tooltip4"> POHOVANI TOFU / FRIED TOFU <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -151,14 +158,16 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> KARAMELIZOVANA SVINJETINA / CARAMELIZED PORK </h4>
+                        <h4 id="tooltip3"> KARAMELIZOVANA SVINJETINA / CARAMELIZED PORK <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
                         <h5> 360 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Komadići svinjskog mesa u pikantnom sosu od djumbira i čilija. <br> Sliced pork in savoury ginger
+                        <h5 class="description"> Komadići svinjskog mesa u pikantnom sosu od đumbira i čilija. <br> Sliced pork in savoury ginger
                             and chili sauce. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
@@ -209,19 +218,23 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> LOPTICE OD KRABE / CRAB BALLS </h4>
+                        <h4 id="tooltip6"> LOPTICE OD KRABE / CRAB BALLS <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
                         <h5> 320 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Loptice od krabinog mesa, pirinča, djumbira, čilija i šrirače. <br> Crab meat mixed with rice, ginger
+                        <h5 class="description"> Loptice od krabinog mesa, pirinča, đumbira, čilija i šrirače. <br> Crab meat mixed with rice, ginger
                             and sriracha. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> SEJTAN U TAMARIND SOSU / SEITAN IN TAMARIND SAUCE </h4>
+                        <h4 id="tooltip7"> ŠEJTAN U TAMARIND SOSU / SEITAN IN TAMARIND SAUCE <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -233,7 +246,9 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> VONTONI AZIJSKE RAVIOLE NA PARI / WONTONS AKA ASIAN STEAMED RAVIOLI </h4>
+                        <h4 id="tooltip8"> VONTONI AZIJSKE RAVIOLE NA PARI / WONTONS AKA ASIAN STEAMED RAVIOLI <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <h5> Piletina / Chicken </h5>
@@ -257,7 +272,9 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> MORNING GLORY SALATA / MORNING GLORY SALAD </h4>
+                        <h4 id="tooltip9"> MORNING GLORY SALATA / MORNING GLORY SALAD <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -269,7 +286,9 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> PIRINAČ JASMIN / JASMIN RICE </h4>
+                        <h4 id="tooltip10"> PIRINAČ JASMIN / JASMIN RICE <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -277,7 +296,9 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> KIMČI </h4>
+                        <h4 id="tooltip11"> KIMČI <span>
+        <img alt="" src="http://www.google.com/images/srpr/logo4w.png" />
+    </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -290,12 +311,15 @@
 
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <div class="col-md-12">
+                    <div class="col-md-7 col-sm-5">
                         <h2 id="big-plates">
                             Veliki tanjiri / Big plates
                         </h2>
                     </div>
-                  
+                    <div class="col-md-5 col-sm-7">
+                        <img id="chopsticks" src="images/chopsticks.png" alt="slika1">
+                    </div>
+
                     <div class="col-md-10 col-sm-10">
                         <h4> PHO GA </h4>
                     </div>
@@ -303,8 +327,8 @@
                         <h5> 360 / 670 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa piletinom, pirincani nudlama, povrcem, mladim
-                            lukom i svezim korijanderom. <br> Famous Vietnamese national dish served with chicken, rice noodles,
+                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa piletinom, pirinčani nudlama, povrćem, mladim
+                            lukom i svežim korijanderom. <br> Famous Vietnamese national dish served with chicken, rice noodles,
                             vegetables, scallions, and fresh coriander. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
@@ -316,8 +340,8 @@
                         <h5> 380 / 690 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa govedjim mesom, pirincanim nudlama, povrcem,
-                            mladim lukom i svezim korijanderom. <br> Famous Vietnamese national dish served with beef, rice
+                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa goveđim mesom, pirinčanim nudlama, povrćem,
+                            mladim lukom i svežim korijanderom. <br> Famous Vietnamese national dish served with beef, rice
                             noodles, vegetables, scallions and fresh coriander. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
@@ -329,13 +353,13 @@
                         <h5> 350 / 660 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa sitake pecurkama, tofu sirom, pirincanim
-                            nudlama, povrcem, mladim lukom i svezim korijanderom. <br> Famous Vietnamese national dish served
+                        <h5 class="description"> Dugo kuvana tradicionalna vijetnamska supa servirana sa šitake pečurkama, tofu sirom, pirinčanim
+                            nudlama, povrćem, mladim lukom i svežim korijanderom. <br> Famous Vietnamese national dish served
                             with shitake mushrooms, tofu, rice noodles, vegetables, scallions, and fresh coriander. </h5>
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4 id="tooltip"> PAČETINA SA NUDLAMA (PIRINČEM) / DUCK WITH NOODLES (RICE)  <span>
+                        <h4 id="tooltip12"> PAČETINA SA NUDLAMA (PIRINČEM) / DUCK WITH NOODLES (RICE) <span>
         <img alt="" src="https://www.w3schools.com/css/img_fjords.jpg" />
     </span></h4>
                     </div>
@@ -416,7 +440,7 @@
                         <h5> 760 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Mesano povrće, tofu sir i šitake pečurke u sosu od kokosovog mleka sa pirinčem. <br> Mixed vegetables,
+                        <h5 class="description"> Mešano povrće, tofu sir i šitake pečurke u sosu od kokosovog mleka sa pirinčem. <br> Mixed vegetables,
                             tofu and shiitake mushrooms with coconut milk sauce, served with rice. </h5>
                     </div>
 
@@ -442,7 +466,7 @@
                         <h5 class="description"> Delikatni čoko zalogaj sa pikantnim ukusom čilija. <br> Bite size schocolate dessert with slightly
                             spicy chilli aftertaste. </h5>
                     </div>
-                     <div class="col-md-10 col-sm-10">
+                    <div class="col-md-10 col-sm-10">
                         <br>
                         <h4> KIKIRIKI TORTA / PEANUT CAKE </h4>
                     </div>
@@ -451,9 +475,10 @@
                         <h5> 360 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class="description"> Pohovana banana sa kikiriki pastom, integralnim biskvitom i kokosom. <br> Fried banana with coconut and peanut cream served on a biscuit crust. </h5>
+                        <h5 class="description"> Pohovana banana sa kikiriki pastom, integralnim biskvitom i kokosom. <br> Fried banana with coconut
+                            and peanut cream served on a biscuit crust. </h5>
                     </div>
-                     <div class="col-md-10 col-sm-10">
+                    <div class="col-md-10 col-sm-10">
                         <br>
                         <h4> MANGO FUDGE </h4>
                     </div>
@@ -462,7 +487,8 @@
                         <h5> 360 </h5>
                     </div>
                     <div class="col-md-12 col-sm-12">
-                        <h5 class=" margin-btm description"> Mača puslica, mango i karamel krema od kondenzovanog mleka. <br> Matcha crispy egg white, mango and condensed milk fudge. </h5>
+                        <h5 class=" margin-btm description"> Mača puslica, mango i karamel krema od kondenzovanog mleka. <br> Matcha crispy egg white, mango and
+                            condensed milk fudge. </h5>
                     </div>
 
                 </div>
@@ -481,7 +507,6 @@
                         <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
                         <li data-target="#carousel-example-generic" data-slide-to="3" class=""></li>
                         <li data-target="#carousel-example-generic" data-slide-to="4" class=""></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="5" class=""></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
@@ -509,11 +534,7 @@
                             <div class="carousel-caption">
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="images/carousel3.jpg" alt="slika6">
-                            <div class="carousel-caption">
-                            </div>
-                        </div>
+
                     </div>
                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -541,7 +562,7 @@
                     <img id="footer-logo" src="images/logo1.png" alt="logoistok" class="img-responsive">
                 </div>
                 <div class="text-center col-sm-2" id="linebreak">
-                    <a href="#div1"> <img src="images/spoonvertical2.png" alt="spoon" class="img-responsive" id="spoonvertical"> </a>
+                    <a href="#div1"> <img src="images/spoonvertical2.png" alt="spoon" class="bounce img-responsive" id="spoonvertical"> </a>
                 </div>
                 <div class="text-center col-sm-5">
                     <div class="mtheader footertext">
@@ -570,17 +591,3 @@
 <script src="scripts/main.js"></script>
 
 </html>
-
-
-<a id="tooltip" href="http://www.google.com/">
-    Google
-   
-</a>
-
-
-<a id="tooltip" href="http://www.google.com/">
-    Another one
-    <span>
-        <img alt="" src="https://www.w3schools.com/css/img_fjords.jpg" />
-    </span>
-</a>
