--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="text-center col-sm-12 col-xs-12">
                         <div class="mtheader headertext2">
-                            <h3 id="istoktextsize">
-                                Istok
-                            </h3>
-                            <h3>
+                           <img id="text" src="images/istok.png">
+                            <h3 id="headertext3">
                                 Restoran vijetnamske kuhinje
                             </h3>
                         </div>
@@ -89,9 +87,18 @@
     </section>
     <section class="full-height-2" id="meni">
         <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 text-center">
+
+  <img id="chop" src="images/chopsticks.png" alt="slika1">
+
+
+
+                </div>
+            </div>
             <div class="row ">
                 <div class="col-md-6 col-sm-12">
-                    <div class="col-md-12">
+                    <div class="col-md-12 text-center">
                         <h2 id="small-plates">
                             Mali tanjiri / Small plates
                         </h2>
@@ -311,15 +318,11 @@
 
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <div class="col-md-7 col-sm-5">
-                        <h2 id="big-plates">
+                  <div class="col-md-12 text-center">
+                        <h2 id="small-plates">
                             Veliki tanjiri / Big plates
                         </h2>
                     </div>
-                    <div class="col-md-5 col-sm-7">
-                        <img id="chopsticks" src="images/chopsticks.png" alt="slika1">
-                    </div>
-
                     <div class="col-md-10 col-sm-10">
                         <h4> PHO GA </h4>
                     </div>
@@ -444,7 +447,7 @@
                             tofu and shiitake mushrooms with coconut milk sauce, served with rice. </h5>
                     </div>
 
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 text-center">
                         <br>
                         <br>
                         <br>
