--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 </head>
 
 <body>
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
     <div id="empty-space">
     </div>
     <header class="full-height">
