--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 <body>
     <div id="loader-wrapper">
         <div id="loader"></div>
+        <div id="logotipik">
+              <img id="text" src="images/istok.png">
+              <img id="text" src="images/logo1.png">
+        </div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
     </div>
@@ -43,7 +47,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="text-center col-sm-12 col-xs-12">
                         <div class="mtheader headertext2">
-                           <img id="text" src="images/istok.png">
+                            <img id="text" src="images/istok.png">
                             <h3 id="headertext3">
                                 Restoran vijetnamske kuhinje
                             </h3>
@@ -95,7 +99,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-  <img id="chop" src="images/chopsticks.png" alt="slika1">
+                    <img id="chop" src="images/chopsticks.png" alt="slika1">
 
 
 
@@ -323,7 +327,7 @@
 
                 </div>
                 <div class="col-md-6 col-sm-12">
-                  <div class="col-md-12 text-center">
+                    <div class="col-md-12 text-center">
                         <h2 id="small-plates">
                             Veliki tanjiri / Big plates
                         </h2>
