--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div id="empty-space">
     </div>
-    <header class="full-height">
+    <header class="full-height kita">
         <div class="container-fluid full-height" id="div1">
             <div id="header" class="row header">
                 <div class="col-md-6">
