--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="text-center col-sm-12 col-xs-12">
                         <div class="mtheader headertext2">
-                            <img id="text" src="images/istok.png">
+                            <img id="istoknatpis" src="images/istok.png">
                             <h3 id="headertext3">
                                 Restoran vijetnamske kuhinje
                             </h3>
