--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="text-center col-sm-12 col-xs-12">
                         <div class="mtheader headertext2">
-                            <img id="istoknatpis">
+                            <img id="istoknatpis" src="images/istok.png">
                             <h3 id="headertext3">
                                 Restoran vijetnamske kuhinje
                             </h3>
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-12 text-center">
-                        <img id="logo" >
+                        <img id="logo" src="images/logo1.png">
                     </div>
                     <div class="col-md-12 col-sm-12">
                         <div class="col-md-3 col-sm-3 text-center navbar">
