--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="col-md-10 col-sm-10">
                         <br>
                         <h4 id="tooltip7"> ŠEJTAN U TAMARIND SOSU / SEITAN IN TAMARIND SAUCE <span>
-        
+                            <img class="horizontal-images" alt="" src="images/sejtan.jpg" />
     </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
