--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:image"              content="https://ibb.co/cPyzVb" />
+    <meta property="og:image"              content="https://image.ibb.co/nJ68Ow/background2.jpg" />
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css" />
 </head>
