--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:image"              content="https://image.ibb.co/nJ68Ow/background2.jpg" />
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="Istok Restaurant | Website" />
+    <meta property="og:image"              content="https://preview.ibb.co/fKv2kb/zaistok.jpg" />
+    <meta property="og:description"        content="The website of vietnamese restaurant, based in the heart of the Belgrade." />
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css" />
 </head>
