--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="The website of vietnamese restaurant, based in the heart of the Belgrade.">
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Istok Restaurant | Website" />
     <meta property="og:image"              content="https://preview.ibb.co/fKv2kb/zaistok.jpg" />
