--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="description" content="The website of vietnamese restaurant, based in the heart of the Belgrade.">
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Istok Restaurant | Website" />
-    <meta property="og:image"              content="https://preview.ibb.co/fKv2kb/zaistok.jpg" />
+    <meta property="og:image"              content="https://preview.ibb.co/mrqMBG/rr.png" />
     <meta property="og:description"        content="The website of vietnamese restaurant, based in the heart of the Belgrade." />
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css" />
