--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="col-md-10 col-sm-10">
                         <br>
                         <h4 id="tooltip7"> ŠEJTAN U TAMARIND SOSU / SEITAN IN TAMARIND SAUCE <span>
-                            <img class="horizontal-images" alt="" src="images/sejtan.jpg" />
+                            <img class="horizontal-images sejtan" alt="" src="images/sejtan.jpg" />
     </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
@@ -308,7 +308,9 @@
                     </div>
                     <div class="col-md-10 col-sm-10">
                         <br>
-                        <h4> PIRINAČ JASMIN / JASMIN RICE </h4>
+                        <h4 id="tooltip25"> PIRINAČ JASMIN / JASMIN RICE <span>
+                            <img class="horizontal-images" alt="" src="images/jasmin.jpg" />
+                        </span></h4>
                     </div>
                     <div id="price" class="col-md-2 col-sm-2">
                         <br>
@@ -545,6 +547,10 @@
                         <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
                         <li data-target="#carousel-example-generic" data-slide-to="3" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="4" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="5" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="6" class=""></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="7" class=""></li>
                         
                     </ol>
                     <div class="carousel-inner" role="listbox">
@@ -565,6 +571,26 @@
                         </div>
                         <div class="item">
                             <img src="images/carousel4.jpg" alt="slika4">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="images/carousel5.jpg" alt="slika5">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="images/carousel6.jpg" alt="slika6">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="images/carousel7.jpg" alt="slika7">
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="images/carousel8.jpg" alt="slika8">
                             <div class="carousel-caption">
                             </div>
                         </div>
