--- a/index.html
+++ b/index.html
@@ -534,6 +534,20 @@
 
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+
+                    <h4>Za specijalne prilike ili grupne rezervacije preko 15 ljudi, kontaktirajte nas 
+                        putem mejla i mi cemo za Vas napraviti posebnu ponudu. <h4>
+                            <hr>
+                                <h4>For a special needs or group bookings over 15 people, please contact us directly 
+                                        and we will taylor make your need for a smoother experience. <br> <br> <h4>
+
+
+
+
+                </div>
+            </div>
         </div>
 
 
@@ -627,7 +641,7 @@
                     <div class="mtheader footertext">
                         <h5 id="footertext">
                             Kontakt i Rezervacije: </br>
-                            011 3281360 <br> restoranistok@gmail.com <br> Radno vreme:<br> Utorak-Nedelja 13:00h-24:00h
+                            011 328 13 60 <br> restoranistok@gmail.com <br><br> Radno vreme / Working hours:<br> Pon / Mon - Zatvoreno / Closed <br> Uto-Cet, Ned / Thu-Thr, Sun 12:00h-24:00h <br> Pet, Sub / Fri, Sat 12:00h-01:00h <br> Kuhinja radi do 23h. <br> Kitchen works till 23h.
                         </h5>
                         <div class="text-center">
                             <a class="nofocus social-icons" href="https://www.facebook.com/istokrestoran/?fref=ts" target="_blank"> <img src="images/facebook.png" alt="facebook" onclick="facebook"> </a>
