Link za rezervaciju

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                             <a href="#contact">Kontakt</a>
                         </div>
                     </div>
+                    <div style="display: flex;
+                    justify-content: center;" class="col-md-12 col-sm-12 text-center">
+                        <a class="link-za-rezervaciju"
+                            href="https://www.i-host.gr/Reservations/New?restaurant=1602&channel=website&lang=eng">Rezervišite</a>
+                    </div>
                 </div>
 
             </div>
@@ -835,7 +840,9 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <a class="reservation-link" href="https://www.i-host.gr/Reservations/New?restaurant=1602&channel=website&lang=eng"> Rezervišite sto u našem restoranu / Reserve table in our restaurant </a>
+                    <a class="reservation-link"
+                        href="https://www.i-host.gr/Reservations/New?restaurant=1602&channel=website&lang=eng">
+                        Rezervišite sto u našem restoranu / Reserve table in our restaurant </a>
                     <hr>
                     <h4>Za specijalne prilike ili grupne rezervacije preko 15 ljudi, kontaktirajte nas putem mejla i mi
                         cemo
